# taskgraph

./: .gitignore  AGENTS.md  README.md  SPEC_GUIDE.md  pyproject.toml
examples/: BANK_REC_LESSONS.md  EVAL.md  README.md  bank_rec.py  bank_rec_generator.py  bank_rec_v1_strict.py  bank_rec_v2_gen.py  bank_rec_v2_hybrid.py  bank_rec_v3_gen.py  bank_rec_v3_hybrid.py  bank_rec_v3_llm.py  bank_rec_v4.py  bank_rec_v5_gen.py  bank_rec_v6.py  score_bank_rec.py  solve_bank_rec.py
examples/archive/: bank_rec_problem.py  bank_rec_v2_gen.py  bank_rec_v2_hybrid.py  bank_rec_v3_gen.py  bank_rec_v3_hybrid.py  bank_rec_v4_gen.py  bank_rec_v5.py  bank_rec_v5_gen.py
examples/bank_rec/: LEARNING_LOG.md  README.md  generate_dataset.py  generator.py  run_all.sh  run_hybrid.py  run_hybrid_v4.py  run_strategy3_hybrid.py  score.py  score_sql_only.py  strategy1_generic.py  strategy2_tuned.py  strategy2a_tuned_detailed.py  strategy3_hybrid.py  strategy3_hybrid_v4.py  strategy3a_sql_only.py  strategy4_pure_prompt.py  strategy6_hybrid_v6.py  strategy6_sql_only.py
examples/basics/: README.md
scripts/: cli.py  inspect_xlsx.py
src/: __init__.py  agent.py  agent_loop.py  api.py  catalog.py  diff.py  infra.py  ingest.py  namespace.py  spec.py  spec_repo.py  sql_utils.py  task.py  workspace.py
tests/: conftest.py  diamond_dag.py  linear_chain.py  single_task.py  test_agent.py  test_agent_loop.py  test_catalog.py  test_cli.py  test_diff.py  test_ingest.py  test_sql_utils.py  test_system.py  test_task.py  test_workspace.py  validate_demo.py  validation_view_demo.py
web/: app.py
(+30 files in other folders)
