[project]
name = "taskgraph"
version = "0.1.0"
description = "LLM task graph runner with SQL views"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "duckdb>=1.0.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
    "polars[pyarrow]>=1.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
# Developer tooling (not required at runtime)
dev = [
    "pytest>=9.0.0",
    "pyright>=1.1.390",
]

[project.scripts]
taskgraph = "scripts.cli:main"
tg = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.pyright]
include = ["src", "scripts"]
exclude = ["**/__pycache__", "tests"]

# Reasonably tight defaults without forcing full strict-mode typing.
typeCheckingMode = "standard"
pythonVersion = "3.14"

# Third-party libs without typing info are common; don't fail on them.
reportMissingTypeStubs = "none"

# Catch key untyped seams without too much churn.
reportUnknownParameterType = "error"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
